@@ -244,6 +244,12 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1676'>UIMA-1676</a>] -         Regex: pear install.xml is missing 2 of the 3 jar files
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1683'>UIMA-1683</a>] -         fix copyright notice in the NOTICE files
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1686'>UIMA-1686</a>] -         add licenses from some Sandbox projects to overall Sandbox license
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1687'>UIMA-1687</a>] -         correct top-level svn license/notice files
+</li>
 </ul>
     
 <h2>        Improvement
@@ -313,6 +319,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1642'>UIMA-1642</a>] -         Regex rule file parameter should allow wildcard expressions when using the datapath to locate rule files
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1689'>UIMA-1689</a>] -         fix some miscompares between svn export and source-distribution
+</li>
 </ul>
     
 <h2>        New Feature
@@ -353,6 +361,6 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1469'>UIMA-1469</a>] -         Add Lucas to the sandbox home page
 </li>
 </ul>
-                        
+                     
 </body>
 </html>
